# embednfs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/embednfs/: Cargo.toml
crates/embednfs-cli/: Cargo.toml
crates/embednfs-cli/src/: main.rs
crates/embednfs-proto/: Cargo.toml  README.md
crates/embednfs-proto/benches/: xdr.rs
crates/embednfs-proto/src/: lib.rs  rpc.rs  types.rs  xdr.rs
crates/embednfs-proto/src/types/: attrs.rs  basic.rs  codec.rs  constants.rs  core.rs  mod.rs  operations.rs  ops.rs  session.rs  tests.rs
crates/embednfs/benches/: server.rs
crates/embednfs/src/: attrs.rs  fs.rs  internal.rs  lib.rs  memfs.rs  server.rs  session.rs
crates/embednfs/src/attrs/: decode.rs  encode.rs  mod.rs  synthesize.rs  tests.rs
crates/embednfs/src/fs/: capabilities.rs  error.rs  info.rs  internal.rs  mod.rs  trait.rs  types.rs
crates/embednfs/src/memfs/: api.rs  commit.rs  core.rs  hardlinks.rs  helpers.rs  mod.rs  ops.rs  path.rs  state.rs  symlinks.rs  tests.rs  xattrs.rs
crates/embednfs/src/server/: compound.rs  file_attrs.rs  handles.rs  mod.rs  objects.rs  staging.rs  tests.rs  transport.rs  util.rs
crates/embednfs/src/server/ops/: attrs.rs  directory.rs  file.rs  io.rs  locking.rs  metadata.rs  mod.rs  namespace.rs  session.rs
crates/embednfs/src/session/: clients.rs  filehandles.rs  locks.rs  manager.rs  metadata.rs  mod.rs  model.rs  opens.rs  sequence.rs  state.rs  stateids.rs  tests.rs
crates/embednfs/tests/: compound_session.rs  create_special.rs  directory.rs  e2e.rs  file_ops.rs  filehandle.rs  integration.rs  io.rs  libnfs_e2e.c  libnfs_test.sh  lock_ops.rs  namespace.rs  nfs4j_smoke.rs  nfs4j_stress.rs  nfs_rs_smoke.rs  nfs_rs_stress.rs  readdir.rs  session.rs
crates/embednfs/tests/common/: attr_bits.rs  encode.rs  external_server.rs  fixtures.rs  mod.rs  nfs4j.rs  nfs_rs.rs  parse.rs  server.rs  session.rs  transport.rs  wrappers.rs
crates/embednfs/tests/compound_session_cases/: lifecycle.rs  misc.rs  mod.rs  protocol_sequence.rs
crates/embednfs/tests/create_special_cases/: create.rs  links.rs  mod.rs  sync.rs
crates/embednfs/tests/directory_cases/: mod.rs  named_attrs.rs  readdir.rs  remove.rs
crates/embednfs/tests/file_ops/: attrs_state.rs
crates/embednfs/tests/file_ops_cases/: attrs_state.rs  lifecycle.rs  mod.rs  secinfo_verify.rs
crates/embednfs/tests/filehandle_cases/: handle_state.rs  lookup.rs  mod.rs
crates/embednfsd/: Cargo.toml  README.md
crates/embednfsd/src/: main.rs
crates/nfs4-proto/: Cargo.toml
crates/nfs4-proto/src/: lib.rs  rpc.rs  types.rs  xdr.rs
crates/nfs4-serve/: Cargo.toml
crates/nfs4-serve/src/: main.rs
crates/nfs4-server/: Cargo.toml
crates/nfs4-server/src/: attrs.rs  fs.rs  lib.rs  memfs.rs  server.rs  session.rs
crates/nfs4-server/tests/: integration.rs  libnfs_test.sh
scripts/: ensure-nfs4j-client.sh  smoke-macos-nfs41.sh
