[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/PeronGH/embednfs"
rust-version = "1.88"
keywords = ["nfs", "nfsv4", "filesystem", "server"]
categories = ["network-programming", "filesystem"]

[workspace.lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
indexing_slicing = "warn"
panic_in_result_fn = "warn"
undocumented_unsafe_blocks = "warn"
missing_safety_doc = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
unused_async = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_comment = "warn"

[workspace.lints.rust]
unfulfilled_lint_expectations = "warn"
unreachable_pub = "warn"
unused_results = "warn"
