[package]
name = "embednfs-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CLI and demo tools for embednfs"
publish = false

[dependencies]
embednfs = { path = "../embednfs" }
embednfs-proto = { path = "../embednfs-proto" }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
