[package]
name = "embednfs-proto"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NFSv4.1 protocol types and XDR encoding/decoding"
readme = "README.md"
exclude = ["CLAUDE.md"]

[lints]
workspace = true

[dependencies]
bytes = "1.11.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
