[package]
name = "embednfs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Embeddable NFSv4.1 server library"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
dashmap = "6.1.0"
embednfs-proto = { path = "../embednfs-proto" }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"

[dev-dependencies]
nfs4_client = "0.1.0"
