[package]
name = "embednfsd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "NFSv4.1 server daemon powered by embednfs"
publish = false

[dependencies]
embednfs = { path = "../embednfs" }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
