[package]
name = "embednfsd"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NFSv4.1 server daemon powered by embednfs"
readme = "README.md"

[dependencies]
embednfs = { path = "../embednfs", version = "0.2.1" }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
