[package]
name = "embednfsd"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NFSv4.1 server daemon powered by embednfs"
readme = "README.md"

[lints]
workspace = true

[dependencies]
embednfs = { path = "../embednfs", version = "0.3.0" }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
