[package]
name = "nfs4-serve"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Example NFSv4.1 server binary"

[dependencies]
nfs4-server = { path = "../nfs4-server" }
nfs4-proto = { path = "../nfs4-proto" }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
